--- a/helm/dev/top/idpay-kafka-connect/values.yaml
+++ b/helm/dev/top/idpay-kafka-connect/values.yaml
@@ -22,15 +22,15 @@ microservice-chart:
 
   autoscaling:
     enable: true
-    # minReplica: 1
-    # maxReplica: 2
-    # pollingInterval: 30 # seconds
-    # cooldownPeriod: 300 # seconds
-    # triggers:
-    #   - type: cpu
-    #     metadata:
-    #       type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-    #      value: "70"
+    minReplica: 1
+    maxReplica: 1
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "70"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
@@ -39,16 +39,16 @@ microservice-chart:
       -XX:+UseG1GC
       -XX:+UseContainerSupport
       -Djava.security.egd=file:/dev/./urandom
-      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7 
+      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
       -Dio.netty.eventLoopThreads=100
-      -javaagent:applicationinsights-agent.jar 
-      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json 
-      -agentlib:jdwp=transport=dt_socket,server=y,address=8001,suspend=n 
-      -Dcom.sun.management.jmxremote=true 
-      -Dcom.sun.management.jmxremote.port=3002 
-      -Dcom.sun.management.jmxremote.rmi.port=3003 
-      -Djava.rmi.server.hostname=127.0.0.1 
-      -Dcom.sun.management.jmxremote.authenticate=false 
+      -javaagent:applicationinsights-agent.jar
+      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
+      -agentlib:jdwp=transport=dt_socket,server=y,address=8001,suspend=n
+      -Dcom.sun.management.jmxremote=true
+      -Dcom.sun.management.jmxremote.port=3002
+      -Dcom.sun.management.jmxremote.rmi.port=3003
+      -Djava.rmi.server.hostname=127.0.0.1
+      -Dcom.sun.management.jmxremote.authenticate=false
       -Dcom.sun.management.jmxremote.ssl=false
     HEAP_OPTS: "-Xms256m -Xmx512m"
 
