--- a/helm/_global/idpay-keycloak.yaml
+++ b/helm/_global/idpay-keycloak.yaml
@@ -46,20 +46,22 @@ microservice-chart:
     runAsNonRoot: true
 
   envConfig:
-    KC_BOOTSTRAP_ADMIN_USERNAME: "admin"
-    KC_BOOTSTRAP_ADMIN_PASSWORD: "admin"
     KC_HOSTNAME: "https://idpay.itn.internal.dev.cstar.pagopa.it/keycloak/"
     KC_HTTP_ENABLED: "true"
     KC_PROXY_HEADERS: "xforwarded"
     PROXY_ADDRESS_FORWARDING: "true"
     KC_HEALTH_ENABLED: "true"
-    KC_DB_URL_DATABASE: "postgres"
-    KC_DB_URL_HOST: "cstar-d-itn-idpay-keycloak.postgres.database.azure.com"
     KC_DB_SCHEMA: "public"
-    KC_DB_URL_PORT: "5432"
-    KC_DB: "postgres" 
-    KC_DB_USERNAME: "admin25"
-    KC_DB_PASSWORD: "keycloak2025@" 
+    KC_DB: "postgres"
+
+
+
+  envSecret:
+    KC_BOOTSTRAP_ADMIN_USERNAME: keycloak-bootstrap-username
+    KC_BOOTSTRAP_ADMIN_PASSWORD: keycloak-bootstrap-password
+    KC_DB_URL: keycloak-postgres-connection-url
+    KC_DB_USERNAME: keycloak-postgres-username
+    KC_DB_PASSWORD: keycloak-postgres-password
 
   externalConfigMapValues:
     idpay-common:
