--- a/helm/dev/top/idpay-merchant/values.yaml
+++ b/helm/dev/top/idpay-merchant/values.yaml
@@ -53,9 +53,9 @@ microservice-chart:
     name: "cstar-d-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
-  # postman-test:
-  #  run: true
-  #  repoName: idpay-merchant
-  #  dir: postman
-  #  collectionName: "idpay-merchant-e2e.postman_collection.json"
-  #  envVariablesFile: "idpay_dev.postman_environment.json"
+postman-test:
+  run: true
+  repoName: idpay-merchant
+  dir: postman
+  collectionName: "idpay-merchant-e2e.postman_collection.json"
+  envVariablesFile: "idpay_itn_dev.postman_environment.json"
