--- a/helm/dev/top/idpay-wallet/values.yaml
+++ b/helm/dev/top/idpay-wallet/values.yaml
@@ -39,7 +39,7 @@ microservice-chart:
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 postman-test:
   run: true
-  repoName: idpay-onboarding-workflow
+  repoName: idpay-wallet
   dir: postman
   collectionName: "idpay-wallet-e2e.postman_collection.json"
   envVariablesFile: "idpay_itn_dev.postman_environment.json"
