--- a/helm/dev/mid/idpay-recovery-error-topic/values.yaml
+++ b/helm/dev/mid/idpay-recovery-error-topic/values.yaml
@@ -13,7 +13,7 @@ microservice-chart:
       cpu: "600m"
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
