--- a/helm/dev/top/idpay-reward-calculator/values.yaml
+++ b/helm/dev/top/idpay-reward-calculator/values.yaml
@@ -18,7 +18,7 @@ microservice-chart:
 
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
