--- a/helm/uat/ext/idpay-notification-email/values.yaml
+++ b/helm/uat/ext/idpay-notification-email/values.yaml
@@ -17,7 +17,7 @@ microservice-chart:
       cpu: "600m"
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
