--- a/helm/uat/ext/idpay-notification-manager/values.yaml
+++ b/helm/uat/ext/idpay-notification-manager/values.yaml
@@ -15,7 +15,7 @@ microservice-chart:
       cpu: "1"
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
