--- a/helm/uat/mid/idpay-group/values.yaml
+++ b/helm/uat/mid/idpay-group/values.yaml
@@ -20,7 +20,7 @@ microservice-chart:
       cpu: "750m"
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
