--- a/helm/uat/mid/idpay-reward-notification/values.yaml
+++ b/helm/uat/mid/idpay-reward-notification/values.yaml
@@ -17,7 +17,7 @@ microservice-chart:
 
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
