--- a/helm/uat/top/idpay-onboarding-workflow/values.yaml
+++ b/helm/uat/top/idpay-onboarding-workflow/values.yaml
@@ -16,7 +16,7 @@ microservice-chart:
       cpu: "1"
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
