--- a/helm/uat/top/idpay-transactions/values.yaml
+++ b/helm/uat/top/idpay-transactions/values.yaml
@@ -16,7 +16,7 @@ microservice-chart:
       cpu: "600m"
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
@@ -48,4 +48,4 @@ microservice-chart:
       -XX:+UseContainerSupport
       -Djava.security.egd=file:/dev/./urandom
       -javaagent:/app/applicationinsights-agent.jar 
-      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json        
+      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
