--- a/helm/dev/top/idpay-asset-register-backend/values.yaml
+++ b/helm/dev/top/idpay-asset-register-backend/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-asset-register-backend
-    tag: snapshot-code-refactor
+    tag: snapshot-release-dev
     pullPolicy: Always
 
   ingress:
