--- a/helm/_global/idpay-admissibility-assessor.yaml
+++ b/helm/_global/idpay-admissibility-assessor.yaml
@@ -55,7 +55,7 @@ microservice-chart:
     KAFKA_COMMANDS_GROUP_ID: "idpay-commands-admissibility-consumer-group"
     MONGODB_DBNAME: "idpay"
     APPLICATIONINSIGHTS_ROLE_NAME: "idpayadmissibilityassessor"
-    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
+    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "INFO"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
     APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
