--- a/helm/_global/idpay-asset-register-backend.yaml
+++ b/helm/_global/idpay-asset-register-backend.yaml
@@ -52,7 +52,7 @@ microservice-chart:
   envConfig:
     MONGODB_DBNAME: rdb
     APPLICATIONINSIGHTS_ROLE_NAME: "idpayassetregisterbackend"
-    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
+    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "INFO"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
     APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
