--- a/helm/_global/idpay-kafka-connect.yaml
+++ b/helm/_global/idpay-kafka-connect.yaml
@@ -55,7 +55,7 @@ microservice-chart:
 
   envConfig:
     APPLICATIONINSIGHTS_ROLE_NAME: "idpaykafkaconnect"
-    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
+    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "INFO"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
     CONNECT_PRODUCER_METADATA_MAX_AGE_MS: "180000"
