--- a/helm/_global/idpay-notification-manager.yaml
+++ b/helm/_global/idpay-notification-manager.yaml
@@ -61,7 +61,7 @@ microservice-chart:
     MONGODB_DBNAME: idpay
     APPLICATIONINSIGHTS_ROLE_NAME: "idpaynotificationmanager"
     KAFKA_COMMANDS_GROUP_IN: "idpay-commands-notification-consumer-group"
-    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
+    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "INFO"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
     APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
