--- a/helm/_global/idpay-portal-welfare-backend-initiative.yaml
+++ b/helm/_global/idpay-portal-welfare-backend-initiative.yaml
@@ -74,7 +74,7 @@ microservice-chart:
   envConfig:
     MONGODB_DBNAME: idpay
     APPLICATIONINSIGHTS_ROLE_NAME: "idpayportalwelfarebackendinitiative"
-    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
+    APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "INFO"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
     APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
