--- a/helm/prod/ext/idpay-notification-manager/values.yaml
+++ b/helm/prod/ext/idpay-notification-manager/values.yaml
@@ -1,12 +1,11 @@
 microservice-chart:
   image:
-    repository: cstarpcommonacr.azurecr.io/idpaynotificationmanager
+    repository: ghcr.io/pagopa/idpay-notification-manager
     tag: latest
     pullPolicy: Always
 
   ingress:
     host: idpay.itn.internal.cstar.pagopa.it
-
   resources:
     requests:
       memory: "1Gi"
@@ -17,8 +16,8 @@ microservice-chart:
 
   autoscaling:
     enable: true
-    minReplica: 3
-    maxReplica: 5
+    minReplica: 1
+    maxReplica: 2
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
@@ -34,15 +33,11 @@ microservice-chart:
       -XX:+UseG1GC
       -XX:+UseContainerSupport
       -Djava.security.egd=file:/dev/./urandom
-      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
-      -Dio.netty.eventLoopThreads=100
       -javaagent:/app/applicationinsights-agent.jar
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
 
   envSecret:
-    aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-p-idpay-kv"
-    tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
+    name: "cstar-p-itn-idpay-kv"
