--- a/helm/prod/top/idpay-kafka-connect/values.yaml
+++ b/helm/prod/top/idpay-kafka-connect/values.yaml
@@ -1,19 +1,24 @@
 microservice-chart:
   image:
-    repository: ghcr.io/pagopa/idpay-ranking
+    repository: ghcr.io/pagopa/idpay-kafka-connect
     tag: latest
     pullPolicy: Always
 
   ingress:
     host: idpay.itn.internal.cstar.pagopa.it
+    servicePort: 8083
+
+  service:
+    ports:
+      - 8083
 
   resources:
     requests:
-      memory: "1024Mi"
-      cpu: "150m"
+      memory: "256Mi"
+      cpu: "100m"
     limits:
-      memory: "1024Mi"
-      cpu: "600m"
+      memory: "800Mi"
+      cpu: "500m"
 
   autoscaling:
     enable: true
@@ -27,24 +32,22 @@ microservice-chart:
           type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
           value: "70"
 
+  envConfig:
+    JAVA_TOOL_OPTIONS: >-
+      -XX:InitialRAMPercentage=80.0
+      -XX:MaxRAMPercentage=90.0
+      -XX:+UseG1GC
+      -XX:+UseContainerSupport
+      -Dio.netty.eventLoopThreads=100
+      -javaagent:applicationinsights-agent.jar
+      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
+
+    HEAP_OPTS: "-Xms256m -Xmx512m"
+
   envSecret:
-    APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
+  aks-api-url: cstar-p-itn-prod-aks-apiserver-url
+  APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
     name: "cstar-p-itn-idpay-kv"
-
-  # nodeSelector: {}
-
-  # tolerations: []
-
-  # affinity: {}
-
-  envConfig:
-    JAVA_TOOL_OPTIONS: >-
-      -XX:InitialRAMPercentage=75.0
-      -XX:MaxRAMPercentage=85.0
-      -XX:+UseG1GC
-      -XX:+UseContainerSupport
-      -Djava.security.egd=file:/dev/./urandom
-      -javaagent:/app/applicationinsights-agent.jar
-      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
+    
