--- a/helm/_global/idpay-recovery-error-topic.yaml
+++ b/helm/_global/idpay-recovery-error-topic.yaml
@@ -64,6 +64,7 @@ microservice-chart:
       KAFKA_EVENTHUB_00_BROKER: kafka_broker
       KAFKA_EVENTHUB_00_SASL_MECHANISM: kafka_sasl_mechanism
       KAFKA_EVENTHUB_00_SECURITY_PROTOCOL: kafka_security_protocol
+    idpay-eventhub-02:
       KAFKA_RTD_BROKER: kafka_broker_rtd_domain
     idpay-eventhub-01:
       KAFKA_ERROR_MESSAGE_SERVERS: kafka_broker
@@ -76,7 +77,7 @@ microservice-chart:
     KAFKA_ERROR_MESSAGE_SASL_JAAS_CONFIG: evh-idpay-errors-idpay-errors-consumer-jaas-config-idpay-01
     SERVICEBUS_IDPAY_SB_CONNECTION_STRING: idpay-onboarding-request-processor-sas-key
     SERVICEBUS_ONBOARDING_CONNECTION_STRING: idpay-onboarding-request-processor-sas-key
-    KAFKA_RTD_TRX_SASL_JAAS_CONFIG: evh-rtd-trx-rtd-trx-producer-jaas-config-idpay-00
+    KAFKA_RTD_TRX_SASL_JAAS_CONFIG: evh-rtd-trx-rtd-trx-producer-jaas-config-idpay-02
     KAFKA_TRANSACTION_SASL_JAAS_CONFIG: evh-idpay-transaction-idpay-transaction-producer-jaas-config-idpay-00
     KAFKA_RULE_UPDATE_SASL_JAAS_CONFIG: evh-idpay-rule-update-idpay-rule-update-producer-jaas-config-idpay-01
     KAFKA_TRANSACTION_USER_ID_SPLITTER_SASL_JAAS_CONFIG: evh-idpay-transaction-user-id-splitter-idpay-transaction-user-id-splitter-producer-jaas-config-idpay-01
