--- a/helm/_global/idpay-reward-user-id-splitter.yaml
+++ b/helm/_global/idpay-reward-user-id-splitter.yaml
@@ -68,6 +68,7 @@ microservice-chart:
     idpay-eventhub-00:
       KAFKA_TRANSACTION_BROKER: kafka_broker
       KAFKA_TRANSACTION_TOPIC: idpay_transaction_topic
+    idpay-eventhub-02:
       KAFKA_RTD_BROKER: kafka_broker_rtd_domain
       KAFKA_RTD_TOPIC: rtd_trx_topic
     idpay-eventhub-01:
@@ -79,7 +80,7 @@ microservice-chart:
 
   envSecret:
     MONGODB_URI: mongodb-primary-connection-string
-    KAFKA_RTD_SASL_JAAS_CONFIG: evh-rtd-trx-rtd-trx-consumer-jaas-config-idpay-00
+    KAFKA_RTD_SASL_JAAS_CONFIG: evh-rtd-trx-rtd-trx-consumer-jaas-config-idpay-02
     KAFKA_TRANSACTION_USER_ID_SPLITTER_SASL_JAAS_CONFIG: evh-idpay-transaction-user-id-splitter-idpay-transaction-user-id-splitter-producer-jaas-config-idpay-01
     KAFKA_TRANSACTION_SASL_JAAS_CONFIG: evh-idpay-transaction-idpay-transaction-producer-jaas-config-idpay-00
     KAFKA_ERRORS_SASL_JAAS_CONFIG: evh-idpay-errors-idpay-errors-producer-jaas-config-idpay-01
