--- a/helm/prod/top/idpay-merchant/values.yaml
+++ b/helm/prod/top/idpay-merchant/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-merchant
-    tag: v1.3.1
+    tag: snapshot
     pullPolicy: Always
 
   ingress:
