--- a/helm/_global/idpay-merchant.yaml
+++ b/helm/_global/idpay-merchant.yaml
@@ -89,6 +89,8 @@ microservice-chart:
     KAFKA_COMMANDS_IN_SASL_JAAS_CONFIG: evh-idpay-commands-idpay-commands-consumer-jaas-config-idpay-01
     KAFKA_COMMANDS_OUT_SASL_JAAS_CONFIG: evh-idpay-commands-idpay-commands-producer-jaas-config-idpay-01
     KAFKA_INITIATIVE_SASL_JAAS_CONFIG: evh-idpay-rule-update-idpay-rule-update-consumer-jaas-config-idpay-01
+    KEYCLOAK_ADMIN_SERVER_URL: keycloak-url
+    KEYCLOAK_ADMIN_CLIENT_SECRET: keycloak-merchant-op-client-secret
 
   nodeSelector: {}
 
