--- a/helm/uat/top/idpay-portal-welfare-backend-initiative/values.yaml
+++ b/helm/uat/top/idpay-portal-welfare-backend-initiative/values.yaml
@@ -2,7 +2,7 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/idpay-portal-welfare-backend-initiative
-    tag: snapshot-release-uat
+    tag: snapshot-uat
     pullPolicy: Always
 
   ingress:
