--- a/helm/prod/top/idpay-merchant/values.yaml
+++ b/helm/prod/top/idpay-merchant/values.yaml
@@ -29,7 +29,9 @@ microservice-chart:
 
   envConfig:
     KEYCLOAK_ADMIN_REDIRECT_URI: "https://bonuselettrodomestici.it/esercente"
-    MERCHANT_DEFAULT_INITIATIVES: "initiative-1","initiative-2"
+    MERCHANT_DEFAULT_INITIATIVES:
+      - "initiative-1"
+      - "initiative-2"
     JAVA_TOOL_OPTIONS: >-
       -XX:InitialRAMPercentage=75.0
       -XX:MaxRAMPercentage=85.0
@@ -45,7 +47,7 @@ microservice-chart:
   keyvault:
     name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
-    
+
 
   postman-test:
     run: true
