--- a/helm/dev/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/dev/top/idpay-admissibility-assessor/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-admissibility-assessor
-    tag: snapshot-develop
+    tag: snapshot-UPBE-145-fix-wsimport
     pullPolicy: Always
 
   ingress:
