--- a/.devops/deploy-argocd-apps.yml
+++ b/.devops/deploy-argocd-apps.yml
@@ -40,6 +40,7 @@ parameters:
     - idpay-admissibility-assessor
     - idpay-asset-register-backend
     - idpay-kafka-connect
+    - mcshared-datavault
 
 - name: APPS_MID
   displayName: Mid ArgoCD Apps. Set to [] to skip deployment.
