--- a/helm/dev/top/mcshared-datavault/values.yaml
+++ b/helm/dev/top/mcshared-datavault/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/mcshared-datavault
-    tag: snapshot-develop
+    tag: snapshot
     pullPolicy: Always
 
   ingress:
