--- a/helm/dev/top/idpay-payment/values.yaml
+++ b/helm/dev/top/idpay-payment/values.yaml
@@ -15,10 +15,13 @@ microservice-chart:
       memory: "1Gi"
       cpu: "600m"
 
+  deployment:
+    replicas: 1 # This value must be set equal to autoscaling.minReplica
+
   autoscaling:
     enable: true
-    minReplica: 1
-    maxReplica: 2
+    minReplica: 2
+    maxReplica: 3
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
